Test both ie9 and ie10